# arxiv-data-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
arxiv/: README.md  dbt_project.yml
arxiv/models/marts/: fct_papers.sql  fct_papers_embeddings.sql  schema.yml
arxiv/models/staging/: schema.yml  sources.yml  stg_papers.sql
arxiv/seeds/: arxiv_categories.csv  seeds_properties.yml
dashboard/: Dockerfile  app.py
kestra/: .env.example  docker-compose-gcp.yml  docker-compose.yml
kestra/flows/: main_arxiv_arxiv_pipeline.yml  main_arxiv_kaggle_ingestion.yml
paper_retrieval/: Dockerfile.full  test_notebook.ipynb
paper_retrieval/frontend/: app.py  requirements.txt
pipeline/: Dockerfile.embed  Dockerfile.embed.gpu  EMBED.md  arxiv_api_fetch.py  embed_papers.py  kaggle_to_gcs.py  load.py  run_embed_gpu.sh
terraform/: .terraform.lock.hcl  api.tf  kestra.tf  main.tf  outputs.tf  sa.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: startup.sh
terraform_local/: .terraform.lock.hcl  api.tf  kestra.tf  main.tf  outputs.tf  sa.tf  terraform.tfvars.example  variables.tf
